@@ -404,7 +404,7 @@ $itemFormList->addRow(_('Description'),
 // status
 $enabledCheckBox = (new CCheckBox('status', ITEM_STATUS_ACTIVE))
 	->setChecked($this->data['status'] == ITEM_STATUS_ACTIVE);
-$itemFormList->addRow(_('Enabled'), $enabledCheckBox);
+$itemFormList->addRow(_('Create enabled'), $enabledCheckBox);
 
 // append tabs to form
 $itemTab = (new CTabView())->addTab('itemTab', $this->data['caption'], $itemFormList);
